JVM: add after id and before time query parameters for pagination; refactored sse listeners
